--- a/pixelArt.css
+++ b/pixelArt.css
@@ -37,14 +37,20 @@ h1 {
 .controls {
     position: relative;
     margin-bottom: 10px;
+    z-index: 1;
 }
 
 #pixelGrid {
     display: grid;
     grid-template-columns: repeat(32, 20px);
     grid-template-rows: repeat(32, 20px);
-    gap: 1px;
+    box-sizing: border-box;
     box-shadow: 30px 40px 90px rgba(128, 0, 128, 0.548);
+    height: auto;
+    margin: 0px;
+    padding: 0px;
+
+    max-width: 671px;
 
 }
 
@@ -52,22 +58,29 @@ h1 {
     width: 20px;
     height: 20px;
     background-color: white;
-    border: 1px solid #ccc;
+    border: 0.1px solid #ccc;
     cursor: pointer;
+    box-sizing: border-box;
 }
 
 .btns {
     position: absolute;
+    height: 30px;
     display: flex;
     flex-direction: column;
     gap: 20px;
     left: -395px;
     top: 10px;
-    background-color: rgba(255, 0, 221, 0.205);
+
     width: 60px;
     justify-content: space-evenly;
     align-items: center;
 
+}
+
+#colorPicker {
+    position: inherit;
+    top: -65px;
 }
 
 #resetButton,
@@ -137,8 +150,10 @@ h1 {
 
 @media (max-width: 968px) {
     #pixelGrid {
+        justify-content: center;
         grid-template-columns: repeat(16, 20px);
         grid-template-rows: repeat(16, 20px);
+
     }
 
 
@@ -148,7 +163,7 @@ h1 {
         display: flex;
         flex-direction: row;
         gap: 2px;
-        bottom: -800px;
+        top: 350px;
         left: -50px;
         background-color: transparent;
 
@@ -157,6 +172,7 @@ h1 {
     #colorPicker {
         position: inherit;
         left: -50px;
+        top: -5px;
         width: 45px;
         height: 45px;
     }
